--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   http: ^1.2.2
   firebase_core: ^3.6.0
   url_launcher: ^6.3.1
+  flutter_riverpod: ^2.5.3
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
