--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_riverpod: ^2.5.3
   font_awesome_flutter: ^10.7.0
+  hugeicons: ^0.0.7
 
 dev_dependencies:
   flutter_test:
