--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_riverpod: ^2.5.3
   font_awesome_flutter: ^10.7.0
   hugeicons: ^0.0.7
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
