--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   hugeicons: ^0.0.7
   image_picker: ^1.1.2
+  firebase_auth: ^5.3.1
 
 dev_dependencies:
   flutter_test:
