--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   hugeicons: ^0.0.7
   image_picker: ^1.1.2
   firebase_auth: ^5.3.1
+  firebase_storage: ^12.3.3
+  firebase_messaging: ^15.1.3
 
 dev_dependencies:
   flutter_test:
