--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_storage: ^12.3.3
   firebase_messaging: ^15.1.3
+  dynamic_table: ^0.0.1-beta.2
 
 dev_dependencies:
   flutter_test:
