--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   firebase_storage: ^12.3.3
   firebase_messaging: ^15.1.3
   dynamic_table: ^0.0.1-beta.2
+  transparent_image: ^2.0.1
+  image: ^4.3.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
