--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   transparent_image: ^2.0.1
   image: ^4.3.0
   uuid: ^4.5.1
+  pie_chart: ^5.4.0
 
 dev_dependencies:
   flutter_test:
