--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   image: ^4.3.0
   uuid: ^4.5.1
   pie_chart: ^5.4.0
+  flutter_material_design_icons: ^1.1.7447
 
 dev_dependencies:
   flutter_test:
