--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -38,7 +40,7 @@ dependencies:
   fl_chart: ^0.69.0
   graphic: ^2.5.0
   quiver: ^3.2.2
-  intl: ^0.19.0
+  intl: any
   cloud_firestore: ^5.4.4
   http: ^1.2.2
   firebase_core: ^3.6.0
@@ -73,6 +75,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
