--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   uuid: ^4.5.1
   pie_chart: ^5.4.0
   flutter_material_design_icons: ^1.1.7447
+  flutter_colorpicker: ^1.1.0
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
