--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   flutter_material_design_icons: ^1.1.7447
   flutter_colorpicker: ^1.1.0
   shared_preferences: ^2.3.3
+  toastification: ^2.3.0
 
 dev_dependencies:
   flutter_test:
