--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   shared_preferences: ^2.3.3
   toastification: ^2.3.0
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
