--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   shared_preferences: ^2.3.3
   toastification: ^2.3.0
   collection: ^1.18.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
