--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   hugeicons: ^0.0.7
   image_picker: ^1.1.2
+  file_picker: ^6.1.1
   firebase_auth: ^5.3.1
   firebase_storage: ^12.3.3
   firebase_messaging: ^15.1.3
